# slack-watchman-enterprise-grid

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: dockerpublish.yml  github_release.yml  pythonpackage.yml  pythonpublish.yml
docs/: signatures.md
scripts/: nix_install.sh  win_install.ps1
signatures/compliance/: date_of_birth.yaml
signatures/sandbox/: placeholder.yaml
signatures/security/: pagerduty_api_tokens.yaml  passwords.yaml  slack_webhooks.yaml
src/: __init__.py
src/signatures/competitive/: archive_files.yaml  budget_files.yaml  excel_files.yaml  powerpoint_files.yaml  word_files.yaml
src/signatures/compliance/: bank_cards.yaml  cusip_numbers.yaml  cv_files.yaml  date_of_birth.yaml  drivers_licence_uk.yaml  iban_numbers.yaml  itin_numbers.yaml  mastercard_datacash.yaml  ni_numbers.yaml  passport_numbers.yaml  ssn_us.yaml
src/signatures/security/: access_tokens.yaml  atlassian_token.yaml  aws_api_tokens.yaml  azure_api_tokens.yaml  azure_service_account_files.yaml  bearer_tokens.yaml  certificate_files.yaml  client_secrets.yaml  cloudflare_api_tokens.yaml  config_files.yaml  executable_files.yaml  facebook_access_tokens.yaml  facebook_secret_tokens.yaml  ftp_credentials.yaml  gcp_service_account_files.yaml  (+25 more)
src/slack_watchman/: __version__.py  slack_wrapper.py
src/slack_watchman_eg/: __init__.py  __version__.py  signature.py  signature_updater.py  slack_wrapper.py  sw_logger.py
tests/: test_rules.py  test_signatures.py
(+43 files in other folders)
