[metadata]
name = slack-watchman-eg
version = attr: slack_watchman.__version__.__version__
description = Monitoring your Slack Enterprise Grid for sensitive information
long_description = file: README.md, CHANGELOG.md
license = GPL-3.0
url = https://github.com/PaperMtn/slack-watchman-enterprise-grid
author = PaperMtn
author_email = papermtn@protonmail.com
keywords = audit, slack, slack-watchman, watchman, blue-team, red-team, threat-hunting, slack-watchman-enterprise-grid
classifiers =
    Intended Audience :: Information Technology
    Topic :: Security
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
package_dir =
    = src
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    requests
    PyYAML
    numpy

[options.package_data]
* = *.yml, *.yaml

[options.entry_points]
console_scripts =
    slack-watchman-eg = src:main

[options.packages.find]
where = src
